--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "silex/silex": "^1.3"
     },
-    "target-dir": "CMSilex/RST",
     "autoload": {
         "psr-4": {
             "CMSilex\\ServiceProviders\\": "ServiceProviders/"
