--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     },
     "autoload": {
         "psr-4": {
-            "CMSilex\\ServiceProviders\\": "ServiceProviders/"
+            "CMSilex\\ServiceProviders\\": "ServiceProviders/",
+            "Gregwar\\RST\\": ""
         }
     }
 }
